# dot_devkit

./: .gitignore
apps/: sk.lua  utils.lua
apps/shortkut/: builder.lua  nix.lua  pkg.lua  ros.lua  sys.lua
flakes/awrit/: flake.nix
flakes/cpp/: flake.nix
flakes/dev/: flake.nix  prophesee-event-msgs.nix
flakes/dev/overlays/: ros-overlay.nix
flakes/dev/pkgs/: catkin-simple.nix  rosbags.nix
flakes/dev/pkgs/prophesee-event-msgs/: humble.nix  noetic.nix
flakes/devkit/: flake.nix
flakes/livebook/: flake.nix
flakes/opengv2/: ceres-solver.nix  evo.nix  flake.nix  pangolin.nix  rosbags.nix  sophus.nix
templates/: Makefile
templates/cmake/: CMakeLists.txt
templates/cmake/cmake/: macros.cmake
templates/meson/: meson.build
templates/nix/: rm_nix.zsh
templates/ubuntu/: ubuntu.sh
utils/: clang-format
